use star-history.com

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -91,7 +91,7 @@
   <a href="https://github.com/bytebase/star-history" style="position: absolute; bottom: 2px; left:5px;">
     Source code
   </a>
-  <a href="https://www.star-history.com" style="position: absolute; bottom: 2px; right:5px;">
+  <a href="https://star-history.com" style="position: absolute; bottom: 2px; right:5px;">
     Open in website
   </a>
   <div>
