minor wording tweak to make more seo friendly

--- a/website/index.html
+++ b/website/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="View star history of GitHub repositories" />
+  <meta name="description" content="View and compare star history of GitHub repositories" />
   <meta name="google-site-verification" content="gWDCNMCQeEt3snNQ8J4NCOmVkz4axYeIp5fH4umVaAs" />
   <link rel="icon" href="./favicon.ico" />
   <link rel="apple-touch-icon" href="./favicon.ico" />
@@ -215,15 +215,9 @@
     <div class="container">
       <hr style="background-color:#dbdbdb; height: 1px" />
       <div style="float:left; margin-bottom: 4px;">
-        <h1>The missing GitHub star history graph.</h1>
-        <div style="margin-top: 4px; font-size: small;">
-          Originally built by
-          <a href="https://twitter.com/tim_qian"><span
-              class="tag is-info is-rounded"><strong>@tim_qian</strong></span></a>
-        </div>
+        <h1>The missing GitHub star history graph</h1>
       </div>
-      <div style="float: right">
-
+      <div style="float:left; margin-left: 8px;">
         <a class="icon button is-white" href="https://twitter.com/bytebaseHQ">
           <i class="fab fa-twitter"></i>
         </a>
@@ -233,6 +227,13 @@
         <a class="icon button is-white" href="https://github.com/bytebase/star-history">
           <i class="fab fa-github"></i>
         </a>
+      </div>
+      <div style="float: right">
+        <span style="font-size: small;">
+          Originally built by
+          <a href="https://twitter.com/tim_qian"><span
+              class="tag is-info is-rounded"><strong>@tim_qian</strong></span></a>
+        </span>
       </div>
     </div>
   </footer>
