Add official star account

--- a/website/index.html
+++ b/website/index.html
@@ -218,10 +218,10 @@
         <h1>The missing GitHub star history graph</h1>
       </div>
       <div style="float:left; margin-left: 8px;">
-        <a class="icon button is-white" href="https://twitter.com/bytebaseHQ">
+        <a class="icon button is-white" href="https://twitter.com/StarHistoryHQ">
           <i class="fab fa-twitter"></i>
         </a>
-        <a class="icon button is-white" href="mailto:support@bytebase.com">
+        <a class="icon button is-white" href="mailto:star@bytebase.com">
           <i class="fas fa-envelope"></i>
         </a>
         <a class="icon button is-white" href="https://github.com/bytebase/star-history">
