Use new GA stream id

--- a/website/index.html
+++ b/website/index.html
@@ -59,13 +59,13 @@
   <title>GitHub Star History</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-MLYC5BTWS1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZDH3P2WZ6W"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
-    gtag('config', 'G-MLYC5BTWS1');
+    gtag('config', 'G-ZDH3P2WZ6W');
   </script>
   <script defer data-domain="star-history.com" src="https://plausible.io/js/plausible.js"></script>
   <script async defer src="https://buttons.github.io/buttons.js"></script>
