Add sponsor by bytebase link

--- a/website/index.html
+++ b/website/index.html
@@ -230,7 +230,8 @@
       </div>
       <div style="float: right">
         <span style="font-size: small;">
-          Originally built by
+          Sponsored by <a href="https://bytebase.com" target="__blank"><strong>Bytebase</strong></a>,
+          originally built by
           <a href="https://twitter.com/tim_qian"><span
               class="tag is-info is-rounded"><strong>@tim_qian</strong></span></a>
         </span>
