Minor wording tweak to be more SEO friendly

--- a/website/index.html
+++ b/website/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="View and compare star history of GitHub repositories" />
+  <meta name="description" content="View and compare GitHub star history of GitHub repositories" />
   <meta name="google-site-verification" content="gWDCNMCQeEt3snNQ8J4NCOmVkz4axYeIp5fH4umVaAs" />
   <link rel="icon" href="./favicon.ico" />
   <link rel="apple-touch-icon" href="./favicon.ico" />
