update twitter sharing url

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://star-history.com/bytebase.webp"
+      content="https://star-history.com/star-history-example.png"
     />
     <link rel="icon" href="/icon.png" />
     <link rel="apple-touch-icon" href="/icon.png" />
