replace copy link btn with share to twitter

--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
       name="twitter:description"
       content="The missing GitHub star history graph."
     />
-    <meta
-      name="twitter:image"
-      content="https://star-history.com/star-history-example.png"
-    />
+    <meta name="twitter:image" content="https://star-history.com/icon.png" />
     <link rel="icon" href="/icon.png" />
     <link rel="apple-touch-icon" href="/icon.png" />
     <link rel="bookmark" href="/icon.png" />
