--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
       name="twitter:description"
       content="The missing GitHub star history graph."
     />
-    <meta name="twitter:image" content="https://star-history.com/icon.png" />
+    <meta
+      name="twitter:image"
+      content="https://star-history-vvsl.onrender.com/star-history.png"
+    />
     <link rel="icon" href="/icon.png" />
     <link rel="apple-touch-icon" href="/icon.png" />
     <link rel="bookmark" href="/icon.png" />
