update multi chart mode

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       rel="stylesheet"
       crossorigin
     />
+    <script src="/js/chart.xkcd.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
