add twitter sharing button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
       content="gWDCNMCQeEt3snNQ8J4NCOmVkz4axYeIp5fH4umVaAs"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="star-history" />
+    <meta name="twitter:creator" content="bytebase" />
+    <meta name="twitter:title" content="Star History" />
+    <meta
+      name="twitter:description"
+      content="The missing GitHub star history graph."
+    />
+    <!-- use static image -->
+    <meta
+      name="twitter:image"
+      content="https://star-history.com/star-history.png"
+    />
     <link rel="icon" href="/icon.png" />
     <link rel="apple-touch-icon" href="/icon.png" />
     <link rel="bookmark" href="/icon.png" />
