update metas and star count handler

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="star-history" />
+    <meta name="twitter:site" content="star-history.com" />
     <meta name="twitter:creator" content="bytebase" />
     <meta name="twitter:title" content="Star History" />
     <meta
@@ -23,7 +23,7 @@
     <!-- use static image -->
     <meta
       name="twitter:image"
-      content="https://star-history.com/star-history.png"
+      content="https://star-history.com/star-history.webp"
     />
     <link rel="icon" href="/icon.png" />
     <link rel="apple-touch-icon" href="/icon.png" />
