--- a/src/extension/popup.html
+++ b/src/extension/popup.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Popup</title>
+    <title>Star History</title>
   </head>
   <body>
     <div id="app"></div>
