--- a/src/extension/popup.html
+++ b/src/extension/popup.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Star History</title>
+    <script src="/js/github-buttons.js"></script>
   </head>
   <body>
     <div id="app"></div>
