--- a/index.html
+++ b/index.html
@@ -66,5 +66,47 @@
       data-domain="star-history.com"
       src="https://plausible.io/js/plausible.js"
     ></script>
+    <script>
+      !(function () {
+        var analytics = (window.analytics = window.analytics || []);
+        if (!analytics.initialize)
+          if (analytics.invoked)
+            window.console &&
+              console.error &&
+              console.error("Segment snippet included twice.");
+          else {
+            analytics.invoked = !0;
+            // NOTE: we only need the identify method to save subscriber's email.
+            analytics.methods = ["identify"];
+            analytics.factory = function (e) {
+              return function () {
+                var t = Array.prototype.slice.call(arguments);
+                t.unshift(e);
+                analytics.push(t);
+                return analytics;
+              };
+            };
+            for (var e = 0; e < analytics.methods.length; e++) {
+              var key = analytics.methods[e];
+              analytics[key] = analytics.factory(key);
+            }
+            analytics.load = function (key, e) {
+              var t = document.createElement("script");
+              t.type = "text/javascript";
+              t.async = !0;
+              t.src =
+                "https://cdn.segment.com/analytics.js/v1/" +
+                key +
+                "/analytics.min.js";
+              var n = document.getElementsByTagName("script")[0];
+              n.parentNode.insertBefore(t, n);
+              analytics._loadOptions = e;
+            };
+            analytics._writeKey = "CVXXNXv3EzfQPYqHoYvlDDDOXmKa9XOj";
+            analytics.SNIPPET_VERSION = "4.15.3";
+            analytics.load("CVXXNXv3EzfQPYqHoYvlDDDOXmKa9XOj");
+          }
+      })();
+    </script>
   </body>
 </html>
