--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="View and compare GitHub star history of open source projects"
+      content="View and compare GitHub star history graph of open source projects"
     />
     <meta
       name="google-site-verification"
