--- a/index.html
+++ b/index.html
@@ -4,27 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
-      name="description"
-      content="View and compare GitHub star history graph of open source projects"
-    />
-    <meta
       name="google-site-verification"
       content="gWDCNMCQeEt3snNQ8J4NCOmVkz4axYeIp5fH4umVaAs"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="star-history.com" />
-    <meta name="twitter:creator" content="bytebase" />
-    <meta name="twitter:title" content="Star History" />
-    <meta
-      name="twitter:description"
-      content="The missing GitHub star history graph."
-    />
-    <!-- use static image -->
-    <meta
-      name="twitter:image"
-      content="https://star-history.com/star-history.webp"
-    />
+    <title>GitHub Star History</title>
     <link rel="icon" href="/icon.png" />
     <link rel="apple-touch-icon" href="/icon.png" />
     <link rel="bookmark" href="/icon.png" />
@@ -34,7 +17,6 @@
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
       crossorigin
     />
-    <title>GitHub Star History</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -42,6 +24,33 @@
       rel="stylesheet"
       crossorigin
     />
+    <meta
+      name="description"
+      content="View and compare GitHub star history graph of open source projects."
+    />
+    <meta property="og:title" content="Star History" />
+    <meta
+      property="og:description"
+      content="View and compare GitHub star history graph of open source projects."
+    />
+    <meta
+      property="og:image"
+      content="https://www.star-history.com/star-history.webp"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="twitter:title" content="Star History" />
+    <meta
+      property="twitter:description"
+      content="View and compare GitHub star history graph of open source projects."
+    />
+    <meta
+      property="twitter:image"
+      content="https://www.star-history.com/star-history.webp"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="star-history.com" />
+    <meta name="twitter:creator" content="bytebase" />
+    <!-- star-history.metadata -->
   </head>
   <body>
     <div id="app"></div>
