chore: update default head metadata

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
       name="google-site-verification"
       content="gWDCNMCQeEt3snNQ8J4NCOmVkz4axYeIp5fH4umVaAs"
     />
-    <title>GitHub Star History</title>
     <link rel="icon" href="/icon.png" />
     <link rel="apple-touch-icon" href="/icon.png" />
     <link rel="bookmark" href="/icon.png" />
@@ -24,33 +23,8 @@
       rel="stylesheet"
       crossorigin
     />
-    <meta
-      name="description"
-      content="View and compare GitHub star history graph of open source projects."
-    />
-    <meta property="og:title" content="Star History" />
-    <meta
-      property="og:description"
-      content="View and compare GitHub star history graph of open source projects."
-    />
-    <meta
-      property="og:image"
-      content="https://www.star-history.com/star-history.webp"
-    />
-    <meta property="og:type" content="website" />
-    <meta property="twitter:title" content="Star History" />
-    <meta
-      property="twitter:description"
-      content="View and compare GitHub star history graph of open source projects."
-    />
-    <meta
-      property="twitter:image"
-      content="https://www.star-history.com/star-history.webp"
-    />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="star-history.com" />
-    <meta name="twitter:creator" content="bytebase" />
-    <!-- star-history.metadata -->
+    <!-- star-history.head.placeholder -->
+    <title>GitHub Star History</title>
   </head>
   <body>
     <div id="app"></div>
@@ -115,5 +89,6 @@
           }
       })();
     </script>
+    <!-- star-history.body.placeholder -->
   </body>
 </html>
